<b><u> v3.02, 24.06.2017</b></u>
<font color=#FF8C00>&#9830;</font> Pimp my AFK Screen. Should be compatible with BenikUI.
<font color=#FF8C00>&#9830;</font> Add an autoscreenshot function on achievements and legendary item drops.
<font color=#FF8C00>&#9830;</font> Update/Add a lot of skins.
<font color=#FF8C00>&#9830;</font> Fix an error in the questinfo skin.
<font color=#FF8C00>&#9830;</font> Add a media section to adjust some fonts. Will be disabled if S&L is loaded.
<font color=#FF8C00>&#9830;</font> Remove the RoleIcons from the Tooltip.
<font color=#FF8C00>&#9830;</font> Add an extern EncounterJournalInfo Frame.

<b><u> v3.01, 19.06.2017</b></u>
<font color=#FF8C00>&#9830;</font> Fix an error in the Orderhall skin. Update the Chromie Talent skin. Thx Simpy <3
<font color=#FF8C00>&#9830;</font> Fix an error in the PvP skin that the tooltips won't show.
<font color=#FF8C00>&#9830;</font> Update a lot of skins.
<font color=#FF8C00>&#9830;</font> Create an option to disable the decorative Stripes.
<font color=#FF8C00>&#9830;</font> Add own detached portraits for Player/Target. The options are disabled if BenikUI is loaded. -- Credits Benik
<font color=#FF8C00>&#9830;</font> Add own options for transparent Actionbar Backdrop. The options are disabled if BenikUI is loaded. -- Credits Benik

<b><u> v3.00, 12.06.2017</b></u>
<font color=#FF8C00>&#9830;</font> !! PLEASE DO A FRESH INSTALL !!
<font color=#FF8C00>&#9830;</font> Add a skin for Premade Group Filter
<font color=#FF8C00>&#9830;</font> Updated and edit a lot of skins
<font color=#FF8C00>&#9830;</font> Remove some code to position the AlwaysUpFrame
<font color=#FF8C00>&#9830;</font> Update BigWigs skin (now half-bar)
<font color=#FF8C00>&#9830;</font> Hide the Notifications if you are in combat
<font color=#FF8C00>&#9830;</font> Use the new method from ElvUI to register modules
<font color=#FF8C00>&#9830;</font> Add bindings for the RaidMarkBar