@@ -1,7 +1,7 @@
 ## Interface: 70200
 ## Author: Merathilis
 ## Credits: Benik, Darth Predator, Blazeflack, Azilroka, fgprodigal, Elv & all AddOn Authors who inspired me
-## Version: 3.02
+## Version: 3.03
 ## Title: |cff1784d1ElvUI|r |cffff7d0aMerathilisUI|r
 ## Notes: A decorative edit for ElvUI + additional features.
 ## Notes-deDE: Eine dekorative Erweiterung für ElvUI + einige zusätzliche Funktionen.
@@ -11,10 +11,10 @@
 ## SavedVariables: MERData
 ## SavedVariablesPerCharacter: MERDataPerChar
 ## OptionalDeps: SharedMedia, XIV_Databar, BigWigs
-## X-ElvVersion: 10.58
+## X-ElvVersion: 10.59
 ## X-Tukui-ProjectID: 286
 ## X-Tukui-ProjectFolders: ElvUI_MerathilisUI
-## X-Curse-Packaged-Version: 3.02
+## X-Curse-Packaged-Version: 3.03
 ## X-Curse-Project-Name: MerathilisUI
 ## X-Curse-Project-ID: merathilis-ui
 
