@@ -1,3 +1,14 @@
+<b><u> v3.03, 07.08.2017</b></u>
+<font color=#FF8C00>&#9830;</font> Add some checks to tooltips. :IsForbidden()
+<font color=#FF8C00>&#9830;</font> Update a lot of skins.
+<font color=#FF8C00>&#9830;</font> Remove the ExtraActionButton Texture -- Credits Blazeflack (CleanBossButton)
+<font color=#FF8C00>&#9830;</font> Adds an Player Model to the tooltip. Disabled by default.
+<font color=#FF8C00>&#9830;</font> Update Changelog to show after the splashScreen.
+<font color=#FF8C00>&#9830;</font> Add UnitFrame option for "AuraSpacing" and "AuraIconText" -- Credits CustomTweaks by Blazeflack
+<font color=#FF8C00>&#9830;</font> Fix a lua error with Auctineer.
+<font color=#FF8C00>&#9830;</font> Fix a lua error if the ElvUI Actionbars are not enabled.
+<font color=#FF8C00>&#9830;</font> Add a new Layout v2 (Still some things to do).
+
 <b><u> v3.02, 24.06.2017</b></u>
 <font color=#FF8C00>&#9830;</font> Pimp my AFK Screen. Should be compatible with BenikUI.
 <font color=#FF8C00>&#9830;</font> Add an autoscreenshot function on achievements and legendary item drops.
